--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!-- <meta  name="viewport"content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width"> -->
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-spa-cli-pc</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico"> 
+    <!-- 设置此ico则打包的win-unpacked文件夹里面的exe会有问题 -->
+    <title>oa-front-pc</title>
   </head>
   <body>
-    <div id="app"></div>
+    <noscript>
+      <strong>Error,Noscript!</strong>
+    </noscript>
+    <div id="app" data-base-url="<%= BASE_URL %>"></div>
   </body>
 </html>
-<!-- 方便手机打印控制台信息中是使用 -->
-<!-- <script src="//cdn.bootcss.com/eruda/1.5.2/eruda.min.js"></script>
-<script>eruda.init();</script> -->
