--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico"> 
     <!-- 设置此ico则打包的win-unpacked文件夹里面的exe会有问题 -->
-    <title>oa-front-pc</title>
+    <title>vue-spa-cli</title>
   </head>
   <body>
     <noscript>
